[package]
name = "async-rt"
version = "0.1.0"
edition = "2021"
rust-version = "1.74"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/dariusc93/async-rt"
readme = "README.md"
categories = ["asynchronous"]
keywords = ["async", "non-blocking", "futures"]
authors = ["Darius Clark"]
exclude = [".gitignore"]


[features]
default = ["tokio"]
threadpool = ["futures/thread-pool"]

[dependencies]
futures = { version = "0.3.31", default-features = false, features = ["std", "alloc", "async-await"] }
parking_lot = "0.12.3"
futures-timer = "3.0.3"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = {  version = "1.42.0", optional = true, features = ["rt", "rt-multi-thread"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4.49"

[dev-dependencies]
tokio = {  version = "1.42.0", features = ["rt", "rt-multi-thread", "macros"] }
futures = { version = "0.3.31", default-features = false, features = ["std", "alloc", "async-await", "thread-pool", "executor"] }